# chirp

./: Makefile  chirp.cabal  hie.yaml  libkst.cabal
.github/workflows/: build.yml
src/Chirp/: Encode.hs  Hash.hs  Html.hs  IO.hs  List.hs  Monad.hs
src/Chirp/Text/: Attoparsec.hs  Parse.hs
src/Libkst/: Encode.hs  Hash.hs  Html.hs  IO.hs  List.hs  Monad.hs  Parse.hs
src/Libkst/Text/: Attoparsec.hs  Parse.hs
test/: Spec.hs
