name:                libkst
version:             0.1.0
synopsis:
  Common utility functions for Krasjet.
description:
  Common utility functions for Krasjet.
license:             MIT
license-file:        LICENSE
author:              Krasjet
maintainer:          Krasjet
copyright:           Copyright (c) 2020 Krasjet
homepage:            https://github.com/Krasjet/libkst
category:            Utils

build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:
      Libkst.IO
      Libkst.Hash
      Libkst.Monad
      Libkst.Parse
  build-depends:
      base               >=4.10 && <4.15
    , bytestring        ^>=0.10
    , base64-bytestring  >=1.0 && <1.2
    , cryptohash-sha256 ^>=0.11
    , deepseq           ^>=1.4
    , directory         ^>=1.3
    , filepath          ^>=1.4
    , process           ^>=1.6
    , text              ^>=1.2
    , transformers      ^>=0.5

test-suite libkst-test
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:
      base               >=4.10 && <4.15
    , libkst
    , tasty             ^>=1.2
    , tasty-hspec       ^>=1.1
    , text              ^>=1.2
    , directory         ^>=1.3
    , filepath          ^>=1.4
